--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="int.css">
+        <link rel="stylesheet" href="style.css">
 
         <title>Interest Calculator</title>
     </head>
@@ -120,6 +120,6 @@
         </div>
     </body>
 
-    <script src="int.js"></script>
+    <script src="script.js"></script>
 
 </html>
